feat: move camera on scroll

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <canvas id="bg"></canvas>
+    <!-- <main>
+      <header>
+        <h1>Jun</h1>
+        <p>Welcome to my website!</p>
+      </header>
+    </main> -->
     <script type="module" src="/main.js"></script>
   </body>
 </html>
